RavenDB-21331 Fix horizontal scrolling for virtual grid

--- a/src/Raven.Studio/wwwroot/Content/css/styles-common-scoped.less
+++ b/src/Raven.Studio/wwwroot/Content/css/styles-common-scoped.less
@@ -1159,8 +1159,7 @@ input[type="file"] + .form-control {
     }
 
     .flex-window-scroll {
-        overflow-y: auto;
-        overflow-x: hidden;
+        overflow: auto;
         position: relative;
         flex-grow: 1;
     }
